# puma

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  changelog.md  dips_cjets_roc.yaml  dips_light.yaml  dips_ujets_roc.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_develop.txt  rnnip_cjets_roc.yaml  rnnip_light.yaml  rnnip_ujets_roc.yaml  run_setup.sh  search.json  setup.cfg  setup.py  sitemap.xml  test_histo.yaml  zensical.toml  zensical.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docker_build.yml  docs-preview-cleanup.yml  docs.yml  github-update-todo.py  github_update_todo.py  linting.yml  pages.yml  publish.yaml  testing.yml  update_todo_issue.yaml
api/fraction_scan/: index.html
api/histogram/: index.html
api/int_eff/: index.html
api/matshow_plot/: index.html
api/pie_chart/: index.html
api/plot_base/: index.html
api/roc/: index.html
api/var_vs_var/: index.html
btag/disc/: dips_discs_bjets.yaml  dips_discs_cjets.yaml  dips_discs_ujets.yaml  rnnip_discs_bjets.yaml  rnnip_discs_cjets.yaml  rnnip_discs_ujets.yaml
btag/prob/: dips_pb_bjets.yaml  dips_pb_cjets.yaml  dips_pb_ujets.yaml  dips_pc_bjets.yaml  dips_pc_cjets.yaml  dips_pc_ujets.yaml  dips_pu_bjets.yaml  dips_pu_cjets.yaml  dips_pu_ujets.yaml  rnnip_pb_bjets.yaml  rnnip_pb_cjets.yaml  rnnip_pb_ujets.yaml  rnnip_pc_bjets.yaml  rnnip_pc_cjets.yaml  rnnip_pc_ujets.yaml  rnnip_pu_bjets.yaml  rnnip_pu_cjets.yaml  rnnip_pu_ujets.yaml
btag/roc/: dips_cjets.yaml  dips_ujets.yaml  rnnip_cjets.yaml  rnnip_ujets.yaml
dev/development_guidelines/: index.html
dev/docker/: index.html
dev/docs_development/: index.html
docker/: Dockerfile  Dockerfile_dev
docs/: build_docs.sh  index.md  requirements.txt  sphinx_build_multiversion.py
docs/api/: fraction_scan.md  histogram.md  int_eff.md  matshow_plot.md  pie_chart.md  plot_base.md  roc.md  var_vs_var.md
docs/dev/: development_guidelines.md  docker.md  docs_development.md
docs/examples/: confusion_matrix.md  dummy_data.md  fraction_scan.md  histograms.md  index.md  int_eff.md  line_plots.md  matrix_plot.md  pie_charts.md  precision_recall.md  rocs.md  tutorial-plotting.md  var_vs_eff.md
docs/hlapi/: high_level_aux_api.md  index.md  n_track_origin.md  yuma.md
docs/source/: conf.py  example.md  index.rst  module_reference.rst  redirect_index.html
docs/source/_static/: switcher.json
docs/source/dev_guidelines/: development_guidelines.md  docker.md  docs_development.md  index.rst
docs/source/examples/: dummy_data.md  fraction_scan.md  high_level_api.md  high_level_aux_api.md  histograms.md  index.md  index.rst  int_eff.md  line_plots.md  pie_charts.md  rocs.md  tutorial-plotting.md  var_vs_eff.md  xbb_plots.md  yuma.md
examples/: Basics_TruthHadrons.ipynb  NDIVE_fit.ipynb  confusion_matrix_examples.py  datasets.yaml  high_level_aux_plots.py  high_level_plots.py  index.html  models.yaml  plot_basic_histogram.py  plot_basic_line_plot.py  plot_config.yaml  plot_contour.py  plot_data_mc.py  plot_discriminant_scores.py  plot_flavour_probabilities.py  plot_fraction_scan.py  plot_fragmentation.py  plot_histogram_underoverflow.py  plot_histograms_from_files.py  plot_int_eff.py  plot_iterative_histogram.py  plot_matshow.py  plot_n_tracks_origin.py  plot_pie.py  plot_pie_chart.py  plot_pt_vs_eff.py  plot_rocs.py  plot_weighted_histograms.py  plt_cfg.yaml  plt_cfg_xbb.yaml  precision_recall_examples.py  taggers.yaml  yuma_ftag_plot_config.yaml  yuma_var_plot_config.yaml
examples/confusion_matrix/: index.html
examples/dummy_data/: index.html
examples/fraction_scan/: index.html
examples/histograms/: index.html
examples/int_eff/: index.html
examples/line_plots/: index.html
examples/matrix_plot/: index.html
examples/pie_charts/: index.html
examples/precision_recall/: index.html
examples/rocs/: index.html
examples/tutorial-plotting/: index.html
examples/var_vs_eff/: index.html
examples/yuma_configs/: input_distributions.yaml  plot_config_ttbar.yaml  plot_config_zprime.yaml  plots_ttbar_tag.yaml  plots_zprime_tag.yaml  taggers.yaml
hlapi/: index.html
hlapi/high_level_aux_api/: index.html
hlapi/n_track_origin/: index.html
hlapi/yuma/: index.html
pr-367/: 404.html  index.html  search.json
pr-367/api/fraction_scan/: index.html
pr-367/examples/: index.html
pr-367/hlapi/: index.html
pr-369/: search.json
pr-370/: search.json
pr-371/: objects.inv  search.json
pr-372/: objects.inv  search.json
pr-373/: 404.html  objects.inv  search.json
pr-375/: 404.html  search.json
pr-375/examples/: index.html
pr-375/hlapi/: index.html
puma/: __init__.py  base.py  contour.py  fraction_scan.py  histogram.py  integrated_eff.py  line_plot_2D.py  line_plot_2d.py  matshow.py  metrics.py  pie.py  plot_base.py  plot_dset.py  plot_ftag.py  regression.py  roc.py  utils.py  var_vs_aux.py  var_vs_eff.py  var_vs_var.py  var_vs_vtx.py
puma/hlplots/: __init__.py  aux_results.py  configs.py  input_distributions.py  n_track_origin.py  plot_ftag.py  results.py  tagger.py  yuma.py  yutils.py
puma/tests/: _image_utils.py  conftest.py  file1.h5  test_docs_tutorial.py  test_fraction_scan.py  test_histogram.py  test_integrated_eff.py  test_line_2D.py  test_line_2d.py  test_matshow.py  test_metrics.py  test_pie_chart.py  test_plot_base.py  test_roc.py  test_truth_hadron.py  test_var_vs_aux.py  test_var_vs_eff.py  test_var_vs_var.py  test_var_vs_vtx.py  test_yuma.py
puma/utils/: __init__.py  aux.py  billoir_preprocessing.py  billoir_vertex_fit.py  colours.py  confusion_matrix.py  discriminant.py  generate.py  global_config.yaml  histogram.py  logger.py  logging.py  mass.py  precision_recall_scores.py  precision_score.py  recall_score.py  truth_hadron.py  vertexing.py
puma/yuma/: __init__.py  configs.py  yutils.py
search/: search_index.json
sphinx/: build_docs.sh  conf.py  example.md  index.rst  requirements.txt
tests/: test_roc.py
(+89 files in other folders)
