[project]
name = "puma-hep"
description = "ATLAS Flavour Tagging Plotting Code"
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.8,<3.12"

[project.urls]
"Homepage" = "https://github.com/umami-hep/puma"
"Issue Tracker" = "https://github.com/umami-hep/puma/issues"

[project.scripts]
yuma = "puma.hlplots.yuma:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
preview = "True"

[tool.ruff]
target-version = "py38"
lint.select = ["I", "E", "W", "F", "B", "UP", "ARG", "SIM", "TID", "RUF", "D2", "D3", "D4"]
lint.ignore = ["D211", "D213", "RUF005", "D401", "D205", "D403", "D400", "D404", "SIM117"]
line-length = 88

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[mypy]
ignore_missing_imports = "True"
