[project]
name = "puma-hep"
description = "ATLAS Flavour Tagging Plotting - Plotting Umami API (PUMA)"
authors = [{name="Joschka Birk"}, {name="Alexander Froch"}, {name="Manuel Guth"}]
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "atlas-ftag-tools==0.2.18",
    "atlasify>=0.8.0",
    "h5py>=3.14.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "palettable>=3.3.0",
    "pandas>=2.3.2",
    "pydot>=4.0.1",
    "pyyaml-include==1.3",
    "scipy>=1.15.3",
    "tables>=3.10.1",
    "testfixtures>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.10.6",
    "ipykernel>=6.30.1",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pydoclint>=0.7.3",
    "pytest_notebook>=0.10.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[project.urls]
"Homepage" = "https://github.com/umami-hep/puma"
"Issue Tracker" = "https://github.com/umami-hep/puma/issues"

[project.scripts]
yuma = "puma.hlplots.yuma:main"

[tool.setuptools.dynamic]
version = {attr = "puma.__version__"}

[tool.setuptools]
packages = ["puma", "puma.utils"]
include-package-data = true

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
preview = true
lint.select = ["ALL"]
lint.ignore = [
    "COM", "D205", "D401", "EM", "FIX", "FBT",
    "S101", "S404", "S602", "PLR2004", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917",
    "PLC0415", "G004", "N802", "C901", "DTZ005", "DTZ007", "INP", "EXE002", "TD002", 
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "CPY001", "TRY003",
    "N803", "N806", "N812", "T201", "PLW1514", "PTH123", "RUF015", "RUF017", "PLR6301", "ERA", "ISC001", 
    "PT027", "NPY002", "PT009", "PTH120", "PLW1641", "PTH118", "PLR0904", "N817", "PTH103", "PTH107", "S603",
    "PTH113", "S113", "TCH", "ANN205", "C419", "ANN401"
]

[tool.ruff.lint.per-file-ignores]
"puma/tests/**" = ["D100", "D101", "D102", "D103", "D104", "D105"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.mypy]
ignore_missing_imports = "True"
disable_error_code = ["union-attr", "override", "operator"]