[metadata]
name = puma
description = Plotting API for HEP flavour tagging plots.
version = attr: puma.__version__
keywords = machine learning, flavour tagging, plots
url = https://github.com/umami-hep/puma

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, W503
max-line-length = 88
select = B,C,E,F,W,T4
darglint-ignore-regex = *

[darglint]
ignore=DAR203, DAR103
docstring_style=numpy
strictness=full
log_level=INFO

[pylint.FORMAT]
max-line-length = 88

[pylint.'MESSAGES CONTROL']
disable = fixme
