[metadata]
name = puma-hep
description = Plotting API for HEP flavour tagging plots.
version = attr: puma.__version__
keywords = machine learning, flavour tagging, plots
url = https://github.com/umami-hep/puma

[options]
zip_safe = False
include_package_data = True
install_requires=
    atlasify==0.8.0
    h5py>=3.7.0
    matplotlib>=3.5.1
    numpy>=1.21.0
    palettable==3.3.0
    pandas[hdf5]>=1.3.5
    scipy>=1.8.0
packages = find:

